# newsAPI

./: Dockerfile  db.sqlite3  heroku.yml  pyproject.toml  requirements.txt
news/: settings.py  urls.py  wsgi.py
politics/: admin.py  models.py  serializers.py  urls.py  views.py
technology/: models.py  permissions.py  serializers.py  views.py
technology/migrations/: 0001_initial.py  0002_rename_politic_post.py
tests/: test_newsapi.py
